2024-03-09  Stephane Chazelas  <stephane@chazelas.org>

	* 52721: fix metafication and regexp/subject confusion in
	pcre_match error message.

2024-03-08  Stephane Chazelas  <stephane@chazelas.org>

	* 52704: Doc/Zsh/params.yo, mention new ${ ... } and ${|...}
	operators and fix process substitution terminology in
	documentation of $zsh_eval_context.

2024-03-05  Bart Schaefer  <schaefer@zsh.org>

	* 52692: Doc/Zsh/params.yo, Src/builtin.c, Src/params.c,
	Test/K01nameref.ztst: local declaration (typeset) of the
	name of a named reference hides the reference rather than
	following it.  Also fix two related crash bugs.

2024-03-05  Stephane Chazelas  <stephane@chazelas.org>

	* 52685: Doc/Zsh/restricted.yo: fix typo in the name of bash's
	BASH_ENV variable.

2024-03-04  Bart Schaefer  <schaefer@zsh.org>

	* unposted (cf. 52615): Src/builtin.c: use META_NOALLOC for 52591

	* unposted (cf. 52617): Src/params.c: only scalars can instantiate
	a declared named reference

	* 52659: Src/builtin.c, Test/K01nameref.ztst: Fix crash when unset
	was called on a named referece, add regression test

	* 52650 plus minor fixes: Doc/Zsh/builtins.yo, Doc/Zsh/expn.yo,
	Doc/Zsh/func.yo, Doc/Zsh/mod_ksh93.yo, Etc/FAQ.yo,
	Src/Modules/ksh93.c, Src/builtin.c, Src/exec.c, Src/params.c,
	Test/D04parameter.ztst, Test/K01nameref.ztst,
	Test/V10private.ztst: add -u option for named references that
	point to the "upper" scope, failed assignments have status 1

2024-03-05  Oliver Kiddle  <opk@zsh.org>

	* 52646: Completion/Zsh/Type/_ps1234, Doc/Zsh/compsys.yo,
	Doc/Zsh/compwid.yo, Src/Modules/watch.c, Src/Zle/complist.c,
	Src/Zle/zle_tricky.c, Src/prompt.c: extend support for highlight
	groups to completion explanation strings and WATCHFMT

	* 52641: midchildan: Doc/Zsh/contrib.yo, Functions/Zle/incarg,
	Test/X05zleincarg.ztst: add a backward variant and make it repeatable

2024-03-02  Bart Schaefer  <schaefer@zsh.org>

	* 52652: Src/params.c, Test/D04parameter.ztst: fix obscure bug